--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Stefani Lutterotti</title>
 
   <base href="/" />
 
@@ -22,14 +22,13 @@
     rel="stylesheet">
 
 
-  <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/favicon.png" />
+  <link rel="icon" type="image/x-icon" href="./assets/icon/favicon.ico">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-title" content="Ionic App" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
-<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
 <body>
   <div id="root"></div>
