--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Stefani Lutterotti</title>
+  <title>Stefan Lutterotti</title>
 
   <base href="/" />
 
